<resources>
    <string name="app_name">Nice Move</string>

    <string name="title_section1">Copy - Delete</string>
    <string name="title_section2">TBC</string>
    <string name="title_section3">TBC</string>
    <string name="to_be_continued">To Be Continued...</string>

    <string name="folder_hint">Folder...</string>
    <string name="browse_button">Browse</string>
    <string name="delete_button">Delete</string>
    <string name="copy_button">Copy</string>
    <string name="link_button">Link</string>

    <string name="progress_title">Copying...</string>

    <string name="result_ok">Done</string>
    <string name="result_er">Error</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="password_set">设置手势密码</string>
    <string name="password_unset">移除手势密码</string>


    <string name="cancel">取消</string>
    <string name="try_again">重试</string>
    <string name="goon">继续</string>
    <string name="confirm">确认</string>
    <string name="set_hint">绘制解锁图案</string>
    <string name="set_confirm_hint">再次绘制进行确认</string>

    <string name="lockpattern_recording_incorrect_too_short" >"至少连接4个点，请重试"</string>
    <string name="lockpattern_error" >"手势密码不对"</string>

    <!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
</resources>
