<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FragmentOne">

    <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/section_label"
        android:layout_marginTop="79dp"
        android:hint="@string/folder_hint"
        android:editable="false"
        android:maxLines="1"
        android:layout_toLeftOf="@+id/button_browse_src"
        android:layout_toRightOf="@+id/section_label"
        android:layout_toEndOf="@+id/section_label" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse_button"
        android:id="@+id/button_browse_src"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_marginTop="39dp"
        android:hint="@string/folder_hint"
        android:editable="false"
        android:maxLines="1"
        android:layout_below="@+id/button_browse_src"
        android:layout_toRightOf="@+id/section_label"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse_button"
        android:id="@+id/button_browse_dst"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"
        android:id="@+id/button_delete"
        android:layout_marginTop="74dp"
        android:layout_below="@+id/editText2"
        android:layout_toRightOf="@+id/section_label"
        android:layout_toEndOf="@+id/section_label" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_button"
        android:id="@+id/button_copy"
        android:layout_alignTop="@+id/button_delete"
        android:layout_alignLeft="@+id/button_browse_dst"
        android:layout_alignStart="@+id/button_browse_dst" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_button"
        android:id="@+id/button_link"
        android:layout_alignTop="@+id/button_delete"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
